# obscura

./: Cargo.toml
.github/workflows/: build-musl.yml  docker.yml  release.yml
crates/obscura-browser/src/: page.rs
crates/obscura-cdp/src/: dispatch.rs
crates/obscura-cdp/src/domains/: network.rs
crates/obscura-cli/src/: main.rs
crates/obscura-dom/src/: selector.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: ops.rs  runtime.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: wreq_client.rs
docs/: CLI-reference.md  Configure-stealth-and-proxies.md  Connect-Puppeteer-or-Playwright.md  Environment-variables.md  Run-in-production-at-scale.md  Use-the-MCP-server.md
